# sharpsystem

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  setup.ps1
.github/workflows/: deploy.yml
.sqlx/: query-090ec8a3c73456060148001abfe07ad3e896a55f84c616126ef799bc5d27081e.json  query-0d4092c2df96ec01dbdae5a86437cc147ae431e4a53ba5ef4d4ff9c826598c24.json  query-1800d2787fa5d031b0b1cfc3faba64497641224176f0b31c3b861ea734b778b8.json  query-2b07892659424544b84a91bbbed95747c913a11a08284f3a2d232f666e361965.json  query-41faa84feab6247c51ba26d6cddee531f3d49dc619ea2e320f7a891ac4bde35d.json  query-4a4960eea0a6f35743cd7fc36aaf54f46d4a553e89549140b5803c0fe244e51f.json  query-503df3b22f17d789046a66c423993d6dc93e8dbb8247a903793ef08330afdc82.json  query-67c580dfa81d91bdf98e4f32b689de4ee0877f02109cdf385978837464628152.json  query-844eb949b891d3099d261a07b6beb5b1eea38c40eba629c9755dfe04f7da085d.json  query-af7a4cebba2591e5bd8f6afaa52b124692f19b7ad8c8a012e12e3c53d22c1122.json  query-bb877d64893f8a1ebaa372188644dbdbf15cfa132c7a9ba07308804332294cd5.json  query-beaeb49f1b3ecdc09a86e5f4af4d9c6d526289c71bc1b2ad56c535e7152a0e63.json  query-d9435b7f92e58ab7685d0699f0477aef35778bc2684710c00be0544390b4111c.json
actions/: Cargo.toml
actions/src/: auth.rs  inventory.rs  lib.rs  status.rs
actions/src/db_ops/: auth.rs  handler.rs  inventory.rs  mod.rs
actions/src/helper/: mod.rs  session_helper.rs
docs/: API_PATTERNS.md  DATABASE.md  UI_UX_GUIDE.md  architecture.md  auth_flow.md  notifications.md
migrations/: 20260205083620_auth_related_migration.down.sql  20260205083620_auth_related_migration.up.sql  20260217191000_performance_indices.sql  20260304081956_create_inventory_tables.down.sql  20260304081956_create_inventory_tables.up.sql  20260305072950_refine_user_and_avatars.down.sql  20260305072950_refine_user_and_avatars.up.sql
models/: Cargo.toml
models/src/: errors.rs  lib.rs  system_state.rs
models/src/auth/: errors.rs
models/src/entities/: inventory.rs  mod.rs  user.rs
models/src/payloads/: auth.rs  inventory.rs  mod.rs
models/src/shared/: mod.rs  notifications.rs  pagination.rs
src/: app.rs  lib.rs  main.rs
src/components/: alert_modal.rs  guard.rs  header.rs  loading.rs  mod.rs  notifier.rs  themed_input.rs
src/routes/: home.rs  mod.rs  not_found.rs
style/: main.scss
style/base/: _reset.scss  _typography.scss  _utilities.scss  _variables.scss  test_append.scss
style/components/: _alert_modal.scss  _buttons.scss  _cards.scss  _forms.scss  _header.scss  _inventory_forms.scss  _loading.scss  _notifications.scss  _ui.scss
style/pages/: _auth.scss  _dashboard.scss  _home.scss  _inventory_system.scss  _not_found.scss
(+13 files in other folders)
