[package]
name = "actions"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.0" }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"], optional = true }

[features]
ssr = ["leptos/ssr", "dep:sqlx"]
