[package]
name = "actions"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.0" }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"], optional = true }
tracing = "0.1"
tokio = { version = "1.44", features = ["rt-multi-thread", "time", "macros"], optional = true }
models = { path = "../models" }
argon2 = { version = "0.5.3", optional = true }
password-hash = { version = "0.5.0", optional = true }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
leptos_axum = { version = "0.8", optional = true }
tower-sessions = { version = "0.14", optional = true }

[features]
ssr = [
    "leptos/ssr",
    "dep:sqlx",
    "dep:tokio",
    "dep:argon2",
    "dep:password-hash",
    "dep:leptos_axum",
    "dep:tower-sessions",
    "models/ssr",
]
