[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"], optional = true }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
leptos = { version = "0.8.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["js"] }

[features]
ssr = ["dep:sqlx", "leptos/ssr"]
